# backstage

./: .dockerignore  .gitignore  app-config.production.yaml  app-config.yaml  catalog-info.yaml  docker-compose.yml  package.json
plugins/scaffolder-backend-module-b4llz-scaffold-utils/: README.md  package.json
plugins/scaffolder-backend-module-b4llz-scaffold-utils/src/: index.ts  module.ts
plugins/scaffolder-backend-module-b4llz-scaffold-utils/src/actions/: shell.ts
plugins/scaffolder-backend-module-super-catalog-scaffolding/: README.md  package.json
plugins/scaffolder-backend-module-super-catalog-scaffolding/src/: index.ts  module.ts
plugins/scaffolder-backend-module-super-catalog-scaffolding/src/actions/: example.test.ts
plugins/super-catalog/: README.md  package.json
plugins/super-catalog-common/: README.md  package.json
plugins/super-catalog-common/src/types/: index.ts  saas.ts  vendor.ts
plugins/super-catalog-common/src/types/cloud/: CloudAccount.ts  (+5 more)
plugins/super-catalog/dev/: index.tsx
plugins/super-catalog/src/: index.ts  plugin.test.ts  plugin.ts  routes.ts
plugins/super-catalog/src/components/: superCatalogSwitch.tsx
templates/python-app/: template.yml
templates/python-app/api_src_base/: web_service.py
templates/python-app/api_src_base/gql/: schema.py
templates/python-app/base/: .dockerignore  .gitignore  Dockerfile  README.md  catalog-info.yml  dev-requirements.txt  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  tasks.py
templates/python-app/base/docs/: index.md
templates/python-app/base/tests/: version.py
(+23 files in other folders)
